--- a/jamsesh-react/jamsesh-app/src/frame/frame.css
+++ b/jamsesh-react/jamsesh-app/src/frame/frame.css
@@ -7,26 +7,47 @@
   color: white;
 }
 
-#logo {
+#masterhead a {
+  text-decoration: none;
+  color: white;
+}
+
+#jamlogo {
   float: left;
   margin-left: 75px;
-  margin-top: 30px;
+  margin-top: 6px;
+  color: white;
+  border: solid white 2px;
+  font-size: 55px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 #startup {
   float: right;
   margin-right: 50px;
-  margin-top: 20px;
+  margin-top: 7px;
 }
 
 #signup {
   width: 80px;
   height: 20px;
+  border: solid white 2px;
+  color: white;
+  padding-top: 5px;
+  margin-bottom: 7px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 #login {
-  height: 20px;
   width: 80px;
+  height: 20px;
+  border: solid white 2px;
+  color: white;
+  padding-top: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 /* FOOTER */
