added css hover over animations

--- a/jamsesh-react/jamsesh-app/src/frame/frame.css
+++ b/jamsesh-react/jamsesh-app/src/frame/frame.css
@@ -12,6 +12,11 @@
   color: white;
 }
 
+#masterhead a:hover {
+  color: black;
+  background: white;
+}
+
 #jamlogo {
   float: left;
   margin-left: 75px;
@@ -21,6 +26,7 @@
   font-size: 55px;
   padding-left: 20px;
   padding-right: 20px;
+  border-radius: 7px;
 }
 
 #startup {
@@ -29,15 +35,24 @@
   margin-top: 7px;
 }
 
+#startup a:hover {
+  color: black;
+  background: white;
+}
+
 #signup {
   width: 80px;
   height: 20px;
   border: solid white 2px;
   color: white;
   padding-top: 5px;
-  margin-bottom: 7px;
   padding-left: 5px;
   padding-right: 5px;
+  border-radius: 7px;
+}
+
+#loginwrap {
+  margin-top: 7px;
 }
 
 #login {
@@ -48,6 +63,7 @@
   padding-top: 5px;
   padding-left: 5px;
   padding-right: 5px;
+  border-radius: 7px;
 }
 
 /* FOOTER */
@@ -63,4 +79,45 @@ height: 80px;
 
 #footertext {
   margin-top: 35px;
+}
+
+/* HOVER OVER ANIMATIONS */
+
+/* Back Pulse */
+@-webkit-keyframes hvr-back-pulse {
+  50% {
+    /* background-color: rgba(32, 152, 209, 0.75); */
+  }
+}
+@keyframes hvr-back-pulse {
+  50% {
+    /* background-color: rgba(32, 152, 209, 0.75); */
+  }
+}
+.hvr-back-pulse {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  overflow: hidden;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  -webkit-transition-property: color, background-color;
+  transition-property: color, background-color;
+}
+.hvr-back-pulse:hover, .hvr-back-pulse:focus, .hvr-back-pulse:active {
+  -webkit-animation-name: hvr-back-pulse;
+  animation-name: hvr-back-pulse;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-delay: 0.5s;
+  animation-delay: 0.5s;
+  -webkit-animation-timing-function: ease-in;
+  animation-timing-function: ease-in;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  /* background-color: #2098D1; */
+  /* background-color: #2098d1; */
+  /* color: white; */
 }
