fixed animation and jumbotron

--- a/jamsesh-react/jamsesh-app/src/components/Jumbotron/Jumbotron.css
+++ b/jamsesh-react/jamsesh-app/src/components/Jumbotron/Jumbotron.css
@@ -173,15 +173,10 @@
 svg {
   width: 100vw;
   height: 80vh;
+  z-index: 100;
 }
 
-body {
-  background: #243842;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
+
 
 .title {
   height: 10vh;
@@ -197,20 +192,8 @@ body {
 
 
 .header{
-	background-color: rgb(6, 215, 243);
+	background-color:transparent;
 	position: relative;
 	width: 100%;
 }
 
-h1{
-	text-align: center;
-	font-size: 90px;
-	font-weight: bold;
-	padding: 90px 0 20px 0; 
-}
-
-h2{
-	text-align: center;
-	font-size: 25px;
-	padding-bottom: 40px;
-}
