--- a/jamsesh-react/jamsesh-app/src/frame/frame.css
+++ b/jamsesh-react/jamsesh-app/src/frame/frame.css
@@ -63,10 +63,17 @@
   padding-right: 5px;
   border-radius: 7px;
 }
-StyledFirebaseAuth {
-  align-self: flex-start;
-  float: left;
+.firebaseui-idp-button {
+  width: 80px;
+  height: 20px;
+  border: solid white 2px;
+  color: black;
+  padding-top: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 7px;
 }
+
 
 /* FOOTER */
 
