--- a/jamsesh-react/jamsesh-app/src/components/CarouselInstrument/carousel.css
+++ b/jamsesh-react/jamsesh-app/src/components/CarouselInstrument/carousel.css
@@ -4,16 +4,12 @@
     color: white;
     margin-top: 1%;
     margin-bottom: 1%;
-    height:55px
+    height:55px;
   }
 
-  .instrumentselector {
-    
-    align-content: center;
+  .InstImage {
+    margin-left: 31.5%;
+    border-radius: 75%;
+    width: 500px;
+    height: 500px;
   }
-
-  .InstImage{
-    margin-left: 22.5%;
-    width: 55%
-  }
-  
