--- a/jamsesh-react/jamsesh-app/src/frame/frame.css
+++ b/jamsesh-react/jamsesh-app/src/frame/frame.css
@@ -34,7 +34,8 @@
   display: flex;
   align-items: center;
   float: right;
-  margin-top: 7px;
+  margin-top: 3px;
+  margin-right: 52.5px;
 }
 
 #startup a:hover {
@@ -42,7 +43,7 @@
   background: white;
 }
 
-#signup {
+/* #signup {
   width: 80px;
   height: 20px;
   border: solid white 2px;
@@ -62,7 +63,8 @@
   padding-left: 5px;
   padding-right: 5px;
   border-radius: 7px;
-}
+} */
+
 .firebaseui-idp-button {
   width: 80px;
   height: 20px;
