--- a/jamsesh-react/jamsesh-app/src/components/CarouselMusician/carousel.css
+++ b/jamsesh-react/jamsesh-app/src/components/CarouselMusician/carousel.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Unica+One");
+
 .slick-slider {
     background-color: black;
     align-content: center;
@@ -10,4 +12,3 @@
   .cards {
     text-align: center;
   }
-  
