--- a/jamsesh-react/jamsesh-app/src/components/signup/signup.css
+++ b/jamsesh-react/jamsesh-app/src/components/signup/signup.css
@@ -1,13 +1,26 @@
 @import url("https://fonts.googleapis.com/css?family=Unica+One");
+
+#aboutu {
+  border-bottom: solid white 1px;
+  padding-bottom: 15px;
+}
+
 #submit {
   background: black;
-  height: 30px;
-  width: 50px;
-  border-radius: 20%;
+  height: 50px;
+  width: 150px;
+  border-radius: 7px;
   font-family: 'Unica One', cursive;
-  margin-top: 10px;
+  margin-top: 15px;
   color: white;
+  font-size: 28px;
 }
+
+#submit:hover {
+  background: white;
+  color: black;
+}
+
 .panel-body{
   font-size: 15px;
   font-family: 'Unica One', cursive;
@@ -27,4 +40,45 @@ input {
 }
 body{
   background: black;
+}
+
+/* HOVER OVER ANIMATIONS */
+
+/* Back Pulse */
+@-webkit-keyframes hvr-back-pulse {
+  50% {
+    /* background-color: rgba(32, 152, 209, 0.75); */
+  }
+}
+@keyframes hvr-back-pulse {
+  50% {
+    /* background-color: rgba(32, 152, 209, 0.75); */
+  }
+}
+.hvr-back-pulse {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  overflow: hidden;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  -webkit-transition-property: color, background-color;
+  transition-property: color, background-color;
+}
+.hvr-back-pulse:hover, .hvr-back-pulse:focus, .hvr-back-pulse:active {
+  -webkit-animation-name: hvr-back-pulse;
+  animation-name: hvr-back-pulse;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-delay: 0.5s;
+  animation-delay: 0.5s;
+  -webkit-animation-timing-function: ease-in;
+  animation-timing-function: ease-in;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  /* background-color: #2098D1; */
+  /* background-color: #2098d1; */
+  /* color: white; */
 }
